--- a/preprocessing.Rmd
+++ b/preprocessing.Rmd
@@ -202,3 +202,12 @@ saveRDS(reviews, file = "data/reviews.rds")
 ```
 
 
+```{r}
+arr_delays <- readRDS('data/arr_delays.rds')
+lapply(unique(arr_delays$OP_CARRIER), 
+  function(x) { 
+    arr_delays %>%
+      filter(OP_CARRIER == x) %>%
+      saveRDS(file = paste0('data/', x, '.rds'))
+    })
+``
