--- a/preprocessing.Rmd
+++ b/preprocessing.Rmd
@@ -168,3 +168,8 @@ for (x in (unique(predictor$OP_CARRIER))) {
 }
 ```
 
+```{r}
+aircrafts <- read_excel("data/FAA-Aircraft-Char-DB-AC-150-5300-13B-App-2023-09-07.xlsx")
+saveRDS(aircrafts, file = "data/aircrafts.rds")
+```
+
